2_gateway_namespace_routing_path/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gxmlb-gateway
  namespace: default
spec:
  gatewayClassName: gke-l7-global-external-managed # Specifies the GatewayClass to be used, here it's a GKE L7 global external managed GatewayClass
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
          from: All  # Allows routes from all namespaces to be attached to this Gateway
