2_gateway_namespace_routing_path/prod_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-site
  namespace: prod
spec:
  selector:
    matchLabels:
      app: prod-site
  template:
    metadata:
      labels:
        app: prod-site
    spec:
      containers:
      - name: prod-site
        image: asia-east1-docker.pkg.dev/williamlab/sample-nginx-server/website2:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: prod-site-service
  namespace: prod
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: prod-site
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prod-route
  namespace: prod
spec:
  parentRefs:
  - namespace: default
    name: gxmlb-gateway
  rules:
  - matches:
    - path:
        value: /prod
    backendRefs:
    - name: prod-site-service
      port: 80
