2_gateway_namespace_routing_path/test_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-site
  namespace: test
spec:
  selector:
    matchLabels:
      app: test-site
  template:
    metadata:
      labels:
        app: test-site
    spec:
      containers:
      - name: test-site
        image: asia-east1-docker.pkg.dev/williamlab/sample-nginx-server/website1:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-site-service
  namespace: test
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: test-site
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: test-route  # Name of the HTTPRoute
  namespace: test  # Namespace where the HTTPRoute is created
spec:
  parentRefs:
  - namespace: default # Namespace where the referenced Gateway is located
    name: gxmlb-gateway # Name of the Gateway that will manage this route
  rules:
  - matches:
    - path:
        value: /test # Match requests with the path "/test"
    backendRefs:
    - name: test-site-service
      port: 80
